    - added ability to skip the disk processing when fragmentation level
      is below than specified (fragmentation_threshold option in GUI;
      UD_FRAGMENTATION_THRESHOLD environment variable in command line tool
      and boot time interface)
    - added settings for file pattern groups to easier exclude or include
      groups of files (fixes issue #3449331)
    - bug fix: filters forced to be case insensitive for all the characters
      (they worked properly for ASCII characters only)

    - the following translations were added:

      Malay

    - the following translations were updated:

      Albanian

    - Internals: creation_time, last_modification_time, last_access_time
      members added to the winx_file_info structure
    - bug fix: winx_wcsistr, winx_wcsmatch, winx_patfind, winx_patcmp 
      routines forced to work properly for all the characters 
      (they worked well for ASCII characters only)
    - bug fix: winx_hr_to_bytes routine forced to convert numbers with
      leading zeros after the decimal point properly
    - winx_toupper, winx_tolower, winx_wcsistr, winx_stristr, winx_wcsmatch,
      winx_patfind, winx_patcmp routines optimized for speed
    - winx_towupper, winx_towlower, winx_wcsupr, winx_wcslwr, winx_wcsicmp
      routines added to zenwinx library to be used instead of the fake 
      Windows routines working properly for ASCII characters only
    - udefrag_towupper, udefrag_towlower, udefrag_wcsupr, udefrag_wcslwr, 
      udefrag_wcsicmp routines added to udefrag library for the same reasons
      as mentioned above


  Version 5.0.7  2012-09-01
  ------------------------------------------------------------------------------
    - added compatibility with the following software by exclusion their 
      essential files from moving (excluded files are listed in brackets):
      SafeBoot (safeboot.fs), Symantec GoBack (Gobackio.bin),
      PGP Whole Disk Encryption (PGPWDE0*), Acronis OS Selector (bootwiz*),